package com.directi.training.isp.exercise_refractored;

public interface SensorClient
{
    void proximityCallback();
}