package com.directi.training.isp.exercise_refractored;

public interface TimerClient
{
    void timeOutCallback();
}